--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-mocks": "~1.5.0",
     "angular-socket-io": "~0.7.0",
     "socket.io": "~2.0.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "angular-scroll-glue": "~2.2.0"
   },
   "resolutions": {
     "angular": "1.6.4"
