Changed title to Goya. Refactored movement a bit. Updated dependencies.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bower": "^1.7.7",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
-    "socket.io": "^2.0.1"
+    "socket.io": "^2.0.1",
+    "lodash": "latest"
   },
   "scripts": {
     "postinstall": "bower install",
