--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.3",
     "bower": "^1.7.7",
+    "express": "^4.15.3",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
-    "socket.io": "^2.0.1",
-    "lodash": "latest"
+    "lodash": "latest",
+    "pg": "^6.4.0",
+    "socket.io": "^2.0.1"
   },
   "scripts": {
     "postinstall": "bower install",
